[ADDED] Registerfingerprint controls
