# ApiResources/docs/swagger.yaml
@@ -30,6 +30,23 @@ definitions:
         example: "123456"
         type: string
     type: object
+  entities.Event:
+    properties:
+      created_at:
+        type: string
+      created_by:
+        type: integer
+      description:
+        type: string
+      end_time:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      start_time:
+        type: string
+    type: object
   entities.User:
     properties:
       biometric_auth:
@@ -65,6 +82,190 @@ info:
   title: AccessGate API
   version: "1.0"
 paths:
+  /events:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entities.Event'
+            type: array
+      security:
+      - BearerAuth: []
+      summary: Lista todos los eventos
+      tags:
+      - Events
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Evento a crear
+        in: body
+        name: event
+        required: true
+        schema:
+          $ref: '#/definitions/entities.Event'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/entities.Event'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Crea un nuevo evento
+      tags:
+      - Events
+  /events/{id}:
+    delete:
+      parameters:
+      - description: ID del evento
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Elimina un evento
+      tags:
+      - Events
+    get:
+      parameters:
+      - description: ID del evento
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.Event'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Obtiene un evento por ID
+      tags:
+      - Events
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID del evento
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Datos del evento
+        in: body
+        name: event
+        required: true
+        schema:
+          $ref: '#/definitions/entities.Event'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Actualiza un evento
+      tags:
+      - Events
+  /events/creator/{user_id}:
+    get:
+      parameters:
+      - description: ID del creador
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entities.Event'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Lista eventos por creador
+      tags:
+      - Events
   /users:
     get:
       produces:
