# ApiResources/src/Events/infrastructure/Events_routes.go
@@ -2,22 +2,28 @@ package infraestructure
 
 import (
 	"api_resources/src/Events/infrastructure/controllers"
+	"api_resources/src/core"
 
 	"github.com/gin-gonic/gin"
 )
 
 type EventsHandlers struct {
-	create  *controllers.CreateEventController
-	delete  *controllers.DeleteEventController
-	getAll  *controllers.GetAllEventsController
-	getByID *controllers.GetEventByIDController
-	update  *controllers.UpdateEventController
+	create            *controllers.CreateEventController
+	getAll            *controllers.GetAllEventsController
+	getByID           *controllers.GetEventByIDController
+	getByCreator      *controllers.GetEventsByCreatorController
+	update            *controllers.UpdateEventController
+	delete            *controllers.DeleteEventController
 }
 
 func EventsRoutes(router *gin.Engine, handlers EventsHandlers) {
-	router.POST("/events", handlers.create.Handle)
-	router.GET("/events", handlers.getAll.Handle)
-	router.GET("/events/:id", handlers.getByID.Handle)
-	router.PUT("/events/:id", handlers.update.Handle)
-	router.DELETE("/events/:id", handlers.delete.Handle)
+	protected := router.Group("/events")
+	protected.Use(core.AuthMiddleware())
+
+	protected.POST("", handlers.create.Execute)
+	protected.GET("", handlers.getAll.Execute)
+	protected.GET("/:id", handlers.getByID.Execute)
+	protected.GET("/creator/:user_id", handlers.getByCreator.Execute)
+	protected.PUT("/:id", handlers.update.Execute)
+	protected.DELETE("/:id", handlers.delete.Execute)
 }
